# shop_backend_python

./: Dockerfile  pyproject.toml
backend_python/: __init__.py
backend_python/app/api/: __init__.py  assets.py  auth.py  categories.py  companies.py  products.py
backend_python/app/api/admin/: __init__.py  auth.py
backend_python/app/api/admin/assets/: __init__.py
backend_python/app/api/admin/categories/: __init__.py
backend_python/app/api/admin/companies/: __init__.py
backend_python/app/api/admin/products/: __init__.py
backend_python/app/dependencies/: __init__.py  access_token.py  query.py  user.py
backend_python/app/helpers/: crud.py  pagination.py  password.py  random.py
backend_python/app/requests/: request_create_category.py  request_create_company.py  request_create_product.py  request_login.py  request_model_base.py  request_register.py  request_validate_token.py
backend_python/app/response/: response_access_token.py  response_asset.py  response_asset_upload_key.py  response_category.py  response_company.py  response_model_base.py  response_product.py  response_user.py
backend_python/config/: app.py  database.py
backend_python/database/: __init__.py  access_token_model.py  asset_model.py  asset_upload_key_model.py  category_model.py  company_model.py  image_model.py  model_base.py  product_model.py  shopping_category_model.py  user_model.py
